<resources>
    // modifcare secondo le nuove indicazioni la sequenza non corrisponde @filippo
    
    <string name="app_name">CardApp</string>
    <string name="consulta_card">Consulta tutte le CARD</string>
    <string name="elenco_form">Elenco moduli Form attivi</string>
    <string name="elenco_form">Elenco moduli Form attivi</string>
    <string name="modulo_referenti">Modulo Registrazione dei Referenti UOC</string>
    <string name="esonero_contributivo">Esonero Contributivo</string>
    <string name="festivita_infrasettimanali">Festività Infrasettimanali</string>
    <string name="banca_ferie">Banca Ferie Solidali</string>
    <string name="stabilizzazione contrattuale">Stabilizzazione Contrattuale</string>
    <string name="settore_presenze">Settore Presenze</string>
    <string name="info_presenze_dei">Informazioni sulle presenze dei</string>
    <string name="info_presenze_degli">Informazioni sulle presenze degli</string>
</resources>

