<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settore_presenze"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#0C3B70"
            android:layout_marginBottom="24dp" />

            // 5 "pulsanti" in stile lista
        <Button
            android:id="@+id/buttonLavoratori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modulo_referenti"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#EEEEEE"
            android:textColor="#000000" />

        <Button
            android:id="@+id/buttonStudenti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/esonero_contributivo"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#EEEEEE"
            android:textColor="#000000" />

        <Button
            android:id="@+id/buttonPazienti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/festivita_infrasettimanali"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#EEEEEE"
            android:textColor="#000000" />

        <Button
            android:id="@+id/buttonVisitatori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/banca_ferie"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#EEEEEE"
            android:textColor="#000000" />

        <Button
            android:id="@+id/buttonClienti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stabilizzazione_contrattuale"
            android:backgroundTint="#EEEEEE"
            android:textColor="#000000" />

    </LinearLayout>
</ScrollView>
